--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.32.11"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.4",
+    "@types/styled-components": "^5.1.9",
+    "styled-components": "^5.2.3",
     "typescript": "^4.2.4"
   }
 }
