--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "stripe": "^8.145.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.4",
     "@types/styled-components": "^5.1.9",
+    "babel-plugin-styled-components": "^1.12.0",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4"
   }
