--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "next": "10.1.3",
+    "next-auth": "^3.23.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "stripe": "^8.145.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.4",
     "@types/styled-components": "^5.1.9",
